--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
@@ -20,12 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,12 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\"\n",
+    "users = pd.read_csv(url, sep='|')\n",
+    "user2 = users\n",
+    "user3 = users"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,12 +66,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "administrator    38.746835\n",
+       "artist           31.392857\n",
+       "doctor           43.571429\n",
+       "educator         42.010526\n",
+       "engineer         36.388060\n",
+       "entertainment    29.222222\n",
+       "executive        38.718750\n",
+       "healthcare       41.562500\n",
+       "homemaker        32.571429\n",
+       "lawyer           36.750000\n",
+       "librarian        40.000000\n",
+       "marketing        37.615385\n",
+       "none             26.555556\n",
+       "other            34.523810\n",
+       "programmer       33.121212\n",
+       "retired          63.071429\n",
+       "salesman         35.666667\n",
+       "scientist        35.548387\n",
+       "student          22.081633\n",
+       "technician       33.148148\n",
+       "writer           36.311111\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.groupby(\"occupation\")[\"age\"].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +117,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "doctor           100.000000\n",
+       "engineer          97.014925\n",
+       "technician        96.296296\n",
+       "retired           92.857143\n",
+       "programmer        90.909091\n",
+       "executive         90.625000\n",
+       "scientist         90.322581\n",
+       "entertainment     88.888889\n",
+       "lawyer            83.333333\n",
+       "salesman          75.000000\n",
+       "educator          72.631579\n",
+       "student           69.387755\n",
+       "other             65.714286\n",
+       "marketing         61.538462\n",
+       "writer            57.777778\n",
+       "none              55.555556\n",
+       "administrator     54.430380\n",
+       "artist            53.571429\n",
+       "librarian         43.137255\n",
+       "healthcare        31.250000\n",
+       "homemaker         14.285714\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user2['is_male'] = user2.gender.apply(lambda x: True if x == 'M' else False)\n",
+    "user2.is_male\n",
+    "(user2.groupby('occupation').is_male.sum() / user2.groupby('occupation').gender.count() * 100).sort_values(ascending = False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,12 +170,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>occupation</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>administrator</th>\n",
+       "      <td>21</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>artist</th>\n",
+       "      <td>19</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor</th>\n",
+       "      <td>28</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educator</th>\n",
+       "      <td>23</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>engineer</th>\n",
+       "      <td>22</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>entertainment</th>\n",
+       "      <td>15</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>executive</th>\n",
+       "      <td>22</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>healthcare</th>\n",
+       "      <td>22</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>homemaker</th>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lawyer</th>\n",
+       "      <td>21</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>librarian</th>\n",
+       "      <td>23</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>marketing</th>\n",
+       "      <td>24</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none</th>\n",
+       "      <td>11</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other</th>\n",
+       "      <td>13</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>programmer</th>\n",
+       "      <td>20</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>retired</th>\n",
+       "      <td>51</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salesman</th>\n",
+       "      <td>18</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scientist</th>\n",
+       "      <td>23</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student</th>\n",
+       "      <td>7</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>technician</th>\n",
+       "      <td>21</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>writer</th>\n",
+       "      <td>18</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               min  max\n",
+       "occupation             \n",
+       "administrator   21   70\n",
+       "artist          19   48\n",
+       "doctor          28   64\n",
+       "educator        23   63\n",
+       "engineer        22   70\n",
+       "entertainment   15   50\n",
+       "executive       22   69\n",
+       "healthcare      22   62\n",
+       "homemaker       20   50\n",
+       "lawyer          21   53\n",
+       "librarian       23   69\n",
+       "marketing       24   55\n",
+       "none            11   55\n",
+       "other           13   64\n",
+       "programmer      20   63\n",
+       "retired         51   73\n",
+       "salesman        18   66\n",
+       "scientist       23   55\n",
+       "student          7   42\n",
+       "technician      21   55\n",
+       "writer          18   60"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.groupby(\"occupation\")[\"age\"].agg([\"min\", \"max\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,12 +359,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation     gender\n",
+       "administrator  F         40.638889\n",
+       "               M         37.162791\n",
+       "artist         F         30.307692\n",
+       "               M         32.333333\n",
+       "doctor         M         43.571429\n",
+       "educator       F         39.115385\n",
+       "               M         43.101449\n",
+       "engineer       F         29.500000\n",
+       "               M         36.600000\n",
+       "entertainment  F         31.000000\n",
+       "               M         29.000000\n",
+       "executive      F         44.000000\n",
+       "               M         38.172414\n",
+       "healthcare     F         39.818182\n",
+       "               M         45.400000\n",
+       "homemaker      F         34.166667\n",
+       "               M         23.000000\n",
+       "lawyer         F         39.500000\n",
+       "               M         36.200000\n",
+       "librarian      F         40.000000\n",
+       "               M         40.000000\n",
+       "marketing      F         37.200000\n",
+       "               M         37.875000\n",
+       "none           F         36.500000\n",
+       "               M         18.600000\n",
+       "other          F         35.472222\n",
+       "               M         34.028986\n",
+       "programmer     F         32.166667\n",
+       "               M         33.216667\n",
+       "retired        F         70.000000\n",
+       "               M         62.538462\n",
+       "salesman       F         27.000000\n",
+       "               M         38.555556\n",
+       "scientist      F         28.333333\n",
+       "               M         36.321429\n",
+       "student        F         20.750000\n",
+       "               M         22.669118\n",
+       "technician     F         38.000000\n",
+       "               M         32.961538\n",
+       "writer         F         37.631579\n",
+       "               M         35.346154\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.groupby([\"occupation\",\"gender\"]).age.mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,31 +430,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation     gender\n",
+       "administrator  F          36\n",
+       "               M          43\n",
+       "artist         F          13\n",
+       "               M          15\n",
+       "doctor         M           7\n",
+       "educator       F          26\n",
+       "               M          69\n",
+       "engineer       F           2\n",
+       "               M          65\n",
+       "entertainment  F           2\n",
+       "               M          16\n",
+       "executive      F           3\n",
+       "               M          29\n",
+       "healthcare     F          11\n",
+       "               M           5\n",
+       "homemaker      F           6\n",
+       "               M           1\n",
+       "lawyer         F           2\n",
+       "               M          10\n",
+       "librarian      F          29\n",
+       "               M          22\n",
+       "marketing      F          10\n",
+       "               M          16\n",
+       "none           F           4\n",
+       "               M           5\n",
+       "other          F          36\n",
+       "               M          69\n",
+       "programmer     F           6\n",
+       "               M          60\n",
+       "retired        F           1\n",
+       "               M          13\n",
+       "salesman       F           3\n",
+       "               M           9\n",
+       "scientist      F           3\n",
+       "               M          28\n",
+       "student        F          60\n",
+       "               M         136\n",
+       "technician     F           1\n",
+       "               M          26\n",
+       "writer         F          19\n",
+       "               M          26\n",
+       "Name: gender, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user3.groupby(['occupation','gender']).gender.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation     gender\n",
+       "administrator  F          36\n",
+       "               M          43\n",
+       "artist         F          13\n",
+       "               M          15\n",
+       "doctor         M           7\n",
+       "educator       F          26\n",
+       "               M          69\n",
+       "engineer       F           2\n",
+       "               M          65\n",
+       "entertainment  F           2\n",
+       "               M          16\n",
+       "executive      F           3\n",
+       "               M          29\n",
+       "healthcare     F          11\n",
+       "               M           5\n",
+       "homemaker      F           6\n",
+       "               M           1\n",
+       "lawyer         F           2\n",
+       "               M          10\n",
+       "librarian      F          29\n",
+       "               M          22\n",
+       "marketing      F          10\n",
+       "               M          16\n",
+       "none           F           4\n",
+       "               M           5\n",
+       "other          F          36\n",
+       "               M          69\n",
+       "programmer     F           6\n",
+       "               M          60\n",
+       "retired        F           1\n",
+       "               M          13\n",
+       "salesman       F           3\n",
+       "               M           9\n",
+       "scientist      F           3\n",
+       "               M          28\n",
+       "student        F          60\n",
+       "               M         136\n",
+       "technician     F           1\n",
+       "               M          26\n",
+       "writer         F          19\n",
+       "               M          26\n",
+       "Name: gender, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user2.groupby(['occupation','gender']).gender.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     user_id  age gender     occupation zip_code  is_male\n",
+      "0          1   24      M     technician    85711     True\n",
+      "1          2   53      F          other    94043    False\n",
+      "2          3   23      M         writer    32067     True\n",
+      "3          4   24      M     technician    43537     True\n",
+      "4          5   33      F          other    15213    False\n",
+      "..       ...  ...    ...            ...      ...      ...\n",
+      "938      939   26      F        student    33319    False\n",
+      "939      940   32      M  administrator    02215     True\n",
+      "940      941   20      M        student    97229     True\n",
+      "941      942   48      F      librarian    78209    False\n",
+      "942      943   22      M        student    77841     True\n",
+      "\n",
+      "[943 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
