--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/07_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/07_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
@@ -22,10 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,12 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# initialize data of lists.\n",
+    "data = {'evolution':['Ivysaur', 'Charmeleon', 'Wartortle', 'Metapod'],\n",
+    "        'hp':[45, 39, 44, 45], \n",
+    "        'name':['Bulbasaur', 'Charmander', 'Squirtle', 'Caterpie'],\n",
+    "        'pokedex':['yes', 'no', 'yes', 'no'],\n",
+    "        'type':['grass', 'fire', 'water', 'bug']}\n",
+    "  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +62,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>name</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>grass</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>no</td>\n",
+       "      <td>fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>no</td>\n",
+       "      <td>bug</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    evolution  hp        name pokedex   type\n",
+       "0     Ivysaur  45   Bulbasaur     yes  grass\n",
+       "1  Charmeleon  39  Charmander      no   fire\n",
+       "2   Wartortle  44    Squirtle     yes  water\n",
+       "3     Metapod  45    Caterpie      no    bug"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon = pd.DataFrame(data)\n",
+    "pokemon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,10 +157,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex\n",
+       "0   Bulbasaur  grass  45     Ivysaur     yes\n",
+       "1  Charmander   fire  39  Charmeleon      no\n",
+       "2    Squirtle  water  44   Wartortle     yes\n",
+       "3    Caterpie    bug  45     Metapod      no"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon = pokemon[['name', 'type', 'hp', 'evolution', 'pokedex']]\n",
+    "pokemon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +252,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nh/_lkctsl16l393rkzcyztswd80000gn/T/ipykernel_75896/2442580929.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pokemon['place'] = place\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>New-York</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>Belgium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>no</td>\n",
+       "      <td>India</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex     place\n",
+       "0   Bulbasaur  grass  45     Ivysaur     yes  New-York\n",
+       "1  Charmander   fire  39  Charmeleon      no        LA\n",
+       "2    Squirtle  water  44   Wartortle     yes   Belgium\n",
+       "3    Caterpie    bug  45     Metapod      no     India"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Declare a list that is to be converted into a column\n",
+    "place = ['New-York', 'LA', 'Belgium', 'India']\n",
+    "\n",
+    "# Using 'place' as the column name\n",
+    "# and equating it to the list\n",
+    "pokemon['place'] = place\n",
+    "  \n",
+    "# Observe the result\n",
+    "pokemon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name         object\n",
+       "type         object\n",
+       "hp            int64\n",
+       "evolution    object\n",
+       "pokedex      object\n",
+       "place        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,8 +413,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
