--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/08_Time_Series/Getting_Financial_Data/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/08_Time_Series/Getting_Financial_Data/Exercises.ipynb
@@ -21,12 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# package to extract data from various Internet sources into a DataFrame\n",
+    "# make sure you have it installed\n",
+    "from pandas_datareader import data, wb\n",
+    "\n",
+    "# package for dates\n",
+    "import datetime as dt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,12 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-01-01 00:00:00\n",
+      "2022-05-27 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = dt.datetime(2015, 1, 1)\n",
+    "\n",
+    "end = dt.datetime(2022, 5, 27)\n",
+    "\n",
+    "\n",
+    "print(start)\n",
+    "print(end)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,22 +203,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
