--- a/content/2.python/2.python_advanced/05.Scraping/2.beautifulsoup_advanced.ipynb
+++ b/content/2.python/2.python_advanced/05.Scraping/2.beautifulsoup_advanced.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,58 +129,53 @@
       "Tous les films pour enfants\n",
       "Tous les films\n",
       "Sorties de la semaine\n",
+      "Top Gun: Maverick\n",
+      "Hommes au bord de la crise de nerfs\n",
+      "Les Crimes du Futur\n",
+      "Birds of America\n",
+      "Ça tourne à Saint-Pierre et Miquelon\n",
+      "Shaan\n",
+      "L'Ombre des pères\n",
+      "F3: Fun and Frustration\n",
       "Doctor Strange in the Multiverse of Madness\n",
-      "Ténor\n",
-      "Les Passagers de la nuit\n",
-      "Le Roi cerf\n",
-      "Varsovie 83, une affaire d'État\n",
-      "Soirée IMA, film et showcase\n",
-      "Petite leçon d’amour\n",
-      "Miss Marx\n",
-      "Il buco\n",
-      "Limbo\n",
-      "Les Animaux Fantastiques : les Secrets de Dumbledore\n",
-      "Qu'est-ce qu'on a tous fait au Bon Dieu ?\n",
-      "Le Secret de la cité perdue\n",
-      "Downton Abbey II : Une nouvelle ère\n",
+      "J'adore ce que vous faites\n",
+      "Coupez !\n",
+      "The Northman\n",
       "Tous les films encore à l'affiche\n",
-      " Jurassic World: Le Monde d'après \n",
+      " Elvis \n",
       " \n",
-      " Firestarter\n",
+      " Compétition officielle\n",
       " \n",
-      " Avatar : la voie de l'eau\n",
-      " Utama : La Terre Oubliée\n",
+      " C'est magnifique !\n",
       " \n",
-      " On sourit pour la photo\n",
+      " Men\n",
       " \n",
+      " Black Phone\n",
       " \n",
       "Tous les films à venir\n",
       "Dernières news cinéma\n",
-      "Doctor Strange 2 charcuté ? 30 minutes auraient été coupées !\n",
-      "Thor 4 : photo de Natalie Portman et Chris Hemsworth flamboyants en costumes\n",
-      "TV Tips : revenez aux sources de la saga Star Wars\n",
-      "Jurassic World 3 : les dinosaures se déchaînent sur les images spectaculaires de la bande-annonce finale\n",
-      "Fast and Furious 10 : des photos du nouveau méchant, Jason Momoa, qui s'éclate en moto sur le tournage à Rome\n",
-      "Mort de Kenneth Welsh, vu dans Twin Peaks et Star Trek Discovery\n",
+      "Star Wars : un film Mandalorian est \"inévitable\"\n",
+      "The Batman 2 : quels méchants Robert Pattinson va-t-il affronter dans la suite ?\n",
+      "Ce soir à la télé : un remake raté qui donne envie de revoir l’original\n",
+      "La bande-annonce d'Elvis de Baz Luhrmann est tombée ! Déhanchez-vous avec le King !\n",
+      "Bill Skarsgård : le clown de Ça a bien changé ! Sa transformation physique est impressionnante\n",
+      "Buzz l'éclair : la nouvelle voix française dévoilée... Et vous allez être étonnés !\n",
       "Tous les dossiers cinéma\n",
       "Bandes-annonces à ne pas manquer\n",
-      "365 jours : Au lendemain\n",
-      "365 jours : Au lendemain Bande-annonce VO\n",
-      "Dans les yeux de Thomas Pesquet et autres aventures spatiales Bande-annonce VF\n",
+      "Don Juan Bande-annonce VF\n",
       "Disney+\n",
       "Netflix\n",
       "Amazon Prime Video\n",
       "Canal+\n",
-      "Oussekine sur Disney+ : on a vu le premier épisode de cette série renversante qui va marquer 2022\n",
-      "Outlander sur Netflix : la saison 6 a-t-elle enfin confirmé cette théorie sur Jamie ?\n",
-      "Romy Schneider sur Netflix : bouleversante aux côtés de Michel Piccoli dans un classique du cinéma français\n",
-      "Après Sherlock et Le Hobbit, Martin Freeman est un flic désabusé dans The Responder sur Canal+\n",
+      "Bande-annonce : The Boys dévoilent leurs pouvoirs, Soldier Boy débarque et Le Protecteur pète un plomb dans la saison 3\n",
+      "Qui est Vecna dans Stranger Things ? La révélation-choc de la saison 4 !\n",
+      "Obi-Wan Kenobi : \"le Star Wars que l’on attendait\" ou \"parfois ennuyeux\" : que pense la presse de la série Disney+ ?\n",
       "Séries à voir  sur CANAL+\n",
+      "Halo\n",
+      "La Flamme\n",
+      "The Responder\n",
+      "Pourquoi pas Evans ?\n",
       "Infiniti\n",
-      "OVNI(s)\n",
-      "Yellowjackets\n",
-      "This is Us\n",
-      "Killing Eve\n",
       "Meilleures séries  sur Netflix\n",
       "Arcane\n",
       "Breaking Bad\n",
@@ -189,27 +184,28 @@
       "L'Attaque des Titans\n",
       "Films disponibles  sur Disney+\n",
       "Doctor Strange\n",
+      "Avatar\n",
       "Alerte rouge\n",
       "Avengers: Endgame\n",
       "Avengers: Infinity War\n",
-      "Titanic\n",
       "Films disponibles sur Prime Video\n",
-      "Le Couteau par la lame\n",
-      "The Contractor\n",
-      "Eaux profondes\n",
+      "Snowpiercer, Le Transperceneige\n",
       "Avant toi\n",
-      "Sans un bruit\n",
+      "Gold\n",
+      "The Game\n",
+      "La Défense Lincoln\n",
       "Les derniers films en VOD\n",
-      "En Attendant Bojangles\n",
-      "The King's Man : Première Mission\n",
-      "La Place d’une autre\n",
+      "Les Enquêtes du département V : L'Effet Papillon\n",
+      "Umma\n",
+      "Les Promesses\n",
       "Les dernières séries en VOD\n",
+      "Chicago Fire\n",
+      "En thérapie\n",
       "Les Enquêtes de Murdoch\n",
-      "HPI\n",
-      "La Faute à Rousseau\n",
       "Sorties DVD & Blu-Ray\n",
-      "Mad Dog\n",
-      "The Beta Test\n",
+      "Dieu n'est pas mort 4\n",
+      "Gasoline Alley\n",
+      "Raging Fire\n",
       "Meilleures séries\n",
       "Episodes inédits ce soir à la TV\n",
       "Séries tv inédites à voir\n",
@@ -220,20 +216,19 @@
       "Toutes les vidéos de séries\n",
       "Tous les teasers de séries\n",
       "Top séries de la semaine\n",
-      "Halo\n",
-      "Les 7 vies de Léa\n",
-      "En un battement\n",
-      "Moon Knight\n",
-      "Les séries les plus attendues\n",
-      "Visitors\n",
+      "Stranger Things\n",
       "Le Flambeau, les aventuriers de Chupacabra\n",
-      "Visions\n",
       "Star Wars: Obi-Wan Kenobi\n",
+      "Qui a tué Sara ?\n",
+      "Les séries les plus attendues\n",
+      "Le Seigneur des Anneaux : Les Anneaux de Pouvoir\n",
+      "She-Hulk : Avocate\n",
+      "Game Of Thrones: House of the Dragon\n",
+      "The Terminal List\n",
       "L'actu séries\n",
-      "Ici tout commence : la grossesse d’Anaïs va être \"un vrai dilemme\" selon Julie Sassoust\n",
-      "Plus Belle la vie : un acteur phare redoute \"une traversée du désert\" après l'arrêt de la série\n",
-      "The Last of Us : ces vidéos de tournage qui devraient réjouir les fans\n",
-      "Mort de Mike Hagerty, le concierge bourru de Friends, à 67 ans\n",
+      "Demain nous appartient : bientôt un nouveau mariage dans la série ?\n",
+      "Quiz Suits : 10 questions sur la série qui a révélé Meghan Markle\n",
+      "Stranger Things 4 : les premières images de la suite dévoilées !\n",
       "Fun Facts\n",
       "Faux raccord\n",
       "Fanzone\n",
@@ -706,8 +701,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -721,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
